@@ -1364,3 +1364,8 @@ argcount check fehlt für einige interpreter primitives, z.b. get-internal-real-
 zeilennummern in fehlermeldungen bei require und load, und filenamen generell
 
 named let* und letrec kompilieren zu endlosschleifen
+
+compiler: eine methode für argslists für functioncalls rausziehen, die schreibt ein einziges null argument als "(Object)null" (und keine argumente als (Object[])null ?)
+-> dann kann an anderen stellen "null" statt "_nil" geschrieben werden -> schneller
+-> oder einfach nie nil als "null" schreiben, sondern immer "(Object)null"?
+-> und eine leere argumentliste als NOARGS - fehlt wsl. bei functioncall in emitForm, vielleicht noch woanders
